Allow linking directly to a repository.
Including repository name after '#' in the uri, eg: '#jaknu/registryfront' will scroll to that repository and unfold it.

--- a/index.html
+++ b/index.html
@@ -189,6 +189,12 @@
         }
       },
       template: '#repository-template',
+      mounted: function () {
+        if (window.location.hash == '#' + this.repository) {
+          window.scroll(0, this.$el.offsetTop)
+          this.load()
+        }
+      },
       methods: {
         load: function () {
           this.manifests = []
