Update location when unfolding.
This lets users copy the url from their browsers after unfolding.

--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
       },
       methods: {
         unfold: function () {
+          window.location.href = '#' + this.repository
           this.manifests = []
           this.loaded = false
           this.opened = true
