--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
       .form-inline .input-group { display: inline-table; vertical-align: middle }
 
-      .left { float: left; padding-left: 15px }
-      .right { float: right; padding-right: 15px }
+      .left { float: left; padding-left: 15px; padding-right: 15px }
+      .right { float: right; padding-left: 15px; padding-right: 15px }
 
       .badge-light { background-color: #f5f5f5; color: #777 }
     </style>
