--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <b>{{ error.title }}:</b> {{ error.message }} <button v-on:click="dismissError(error)" class="close">&times</button>
       </div>
 
-      <rf-repository  v-for='repository in filteredRepositories' :repository="repository"></rf-repository>
+      <rf-repository  v-for='repository in filteredRepositories' :repository="repository" :color="repositoryColor(repository)"></rf-repository>
       <div v-if="filteredRepositories.length == 0" class="panel panel-default">
         <div class="panel-body"><rf-glyph icon="info-sign"></rf-glyph> No repositories</div>
       </div>
@@ -54,7 +54,7 @@
 
   <script type="text/x-template" id="repository-template">
     <div class="panel panel-default">
-      <div class="panel-heading">
+      <div class="panel-heading" :style="'background-color: ' + color">
         <div class="panel-title row">
           <div class="left">
             <rf-glyph :icon="opened ? 'folder-open' : 'folder-close'"></rf-glyph> {{ repository }}
@@ -219,7 +219,10 @@
     })
 
     Vue.component('rf-repository', {
-      props: ['repository'],
+      props: {
+        repository: { type: String, required: true },
+        color: { type: String }
+      },
       data: function () { return {
         opened: false,
         loaded: false,
@@ -352,6 +355,16 @@
         },
         dismissError: function (err) {
           this.errors.splice(this.errors.indexOf(err), 1)
+        },
+        repositoryColor: function (name) {
+          if (this.config.repositoryColors) {
+            for (pattern in this.config.repositoryColors) {
+              if (name.match(pattern)) {
+                return this.config.repositoryColors[pattern]
+              }
+            }
+          }
+          return '';
         }
       }
     })
