--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <b>{{ error.title }}:</b> {{ error.message }} <button v-on:click="dismissError(error)" class="close">&times</button>
       </div>
 
-      <rf-repository  v-for='repository in filteredRepositories' :repository="repository" :color="repositoryColor(repository)"></rf-repository>
+      <rf-repository  v-for='repository in filteredRepositories' :repository="repository" :color="repositoryColor(repository)" :showremove="showremove"></rf-repository>
       <div v-if="filteredRepositories.length == 0" class="panel panel-default">
         <div class="panel-body"><rf-glyph icon="info-sign"></rf-glyph> No repositories</div>
       </div>
@@ -72,7 +72,7 @@
       <div v-if="opened" class="list-group">
         <div v-if="!loaded" class="list-group-item"><rf-glyph icon="hourglass"></rf-glyph> Loading manifests</div>
         <div v-if="loaded && filteredManifests.length == 0" class="list-group-item"><rf-glyph icon="info-sign"></rf-glyph> Nothing to show</div>
-        <rf-manifest v-for="manifest in filteredManifests" :manifest="manifest" :repository="repository" v-on:deleted="unfold"></rf-manifest>
+        <rf-manifest v-for="manifest in filteredManifests" :manifest="manifest" :repository="repository" v-on:deleted="unfold" :showremove="showremove"></rf-manifest>
       </div>
     </div>
   </script>
@@ -88,7 +88,7 @@
           <rf-glyphbadge look="light" icon="list"> {{ manifest.layers.length }} layers</rf-glyphbadge>
           <rf-glyphbadge look="light" icon="compressed"> {{ manifest.size | bytestomb }} MB</rf-glyphbadge>
           <rf-glyphbadge look="light" icon="barcode"> {{ manifest.imageId }}</rf-glyphbadge>
-          <rf-warningglyphbutton :click="remove" look="danger" icon="erase" warning="Really remove this image?"></rf-warningglyphbutton>
+          <rf-warningglyphbutton v-if="showremove" :click="remove" look="danger" icon="erase" warning="Really remove this image?"></rf-warningglyphbutton>
         </div>
       </div>
     </div>
@@ -198,7 +198,11 @@
     })
 
     Vue.component('rf-manifest', {
-      props: ['manifest', 'repository'],
+      props: {
+        manifest: { type: Object, required: true },
+        repository: { type: String, repository: true },
+        showremove: { type: Boolean, default: true }
+      },
       template: '#manifest-template',
       computed: {
         pullName: function () {
@@ -221,7 +225,8 @@
     Vue.component('rf-repository', {
       props: {
         repository: { type: String, required: true },
-        color: { type: String }
+        color: { type: String },
+        showremove: { type: Boolean, default: true }
       },
       data: function () { return {
         opened: false,
@@ -328,6 +333,9 @@
           } catch (e) {
             return []
           }
+        },
+        showremove: function () {
+          return this.config.showRemove || false;
         }
       },
       created: function () {
