--- a/index.html
+++ b/index.html
@@ -352,25 +352,25 @@
         })
       },
       methods: {
-        walkRepositories : function (url, repos, cb) {
-          axios.get(
-            url
-          ).then((res) => {
-            repos.push.apply(repos, res.data.repositories);
-            if ("link" in res.headers) {
-              var link = res.headers["link"];
-              link = link.split(">")[0].split("<")[1]; // The link is packed in <the-link> brackets, remove them
-              this.walkRepositories(link, repos, cb);
-            } else {
-              cb(repos);
-            }
-          }).catch((err) => { 
-            bus.$emit('error', {title: 'Failed to load repository list', message: err.message}) 
-          })
-        },
 
         loadRepositories: function () {
-          this.walkRepositories('/v2/_catalog', [], (repos) => {
+          var walkRepositories = function (url, repos, cb) {
+            axios.get(
+              url
+            ).then((res) => {
+              repos.push.apply(repos, res.data.repositories);
+              if ("link" in res.headers) {
+                var link = res.headers["link"];
+                link = link.split(">")[0].split("<")[1]; // The link is packed in <the-link> brackets, remove them
+                walkRepositories(link, repos, cb);
+              } else {
+                cb(repos);
+              }
+            }).catch((err) => {
+              bus.$emit('error', {title: 'Failed to load repository list', message: err.message})
+            })
+          }
+          walkRepositories('/v2/_catalog', [], (repos) => {
             this.repositories = repos;
           });
         },
